2nd moment and var for filtered renewal process

--- a/theory/campbell_theorem.ipynb
+++ b/theory/campbell_theorem.ipynb
@@ -123,9 +123,9 @@
    "source": [
     "# Filtered Renewal processes\n",
     "\n",
-    "Renewal processes are generalizations of the Poisson point process. In the Poisson point process, each interval independent, and identically distributed according to the exponential distribution. In a renewal process, intervals are also idependent and identically distributed, but the distribution is not restricted to be exponential.\n",
+    "Renewal processes are generalizations of the Poisson point process. In the Poisson point process, each interval between events is independent and identically distributed according to the exponential distribution. In a renewal process, intervals are also idependent and identically distributed, but the distribution is not restricted to be exponential.\n",
     "\n",
-    "Filter is given by \n",
+    "Synaptic statistics can be described by a filtered renewal process where the filter is given by \n",
     "\n",
     "$$\n",
     "f(t) = \n",
@@ -135,13 +135,15 @@
     "\\end{cases}\n",
     "$$\n",
     "\n",
+    "and the incoming spike statistics are modeled by the renewal process. We are interested in the expected value and variance of the filtered renewal process. Our filtered process will be given by\n",
+    "\n",
     "\\begin{align*}\n",
-    "X &= f(t_1) + f(t_1+t_2) + f(t_1+t_2+t_3) + \\ldots \\\\\n",
-    " &= \\frac{1}{\\tau}e^{-t_1/\\tau} + \\frac{1}{\\tau}e^{-(t_1+t_2)/\\tau} + \n",
-    "     \\frac{1}{\\tau}e^{-(t_1+t_2+t_3)/\\tau} + \\ldots \\\\\n",
-    " &= \\frac{1}{\\tau}\\left(e^{-t_1/\\tau}+e^{-t_1/\\tau}e^{-t_2/\\tau}+\n",
-    "     e^{-t_1/\\tau}e^{-t_2/\\tau}e^{-t_3/\\tau} + \\ldots\\right) \\\\\n",
-    " &= \\frac{1}{\\tau}\\sum_{i=1}^\\infty\\prod_{j=1}^ie^{-t_i/\\tau}\n",
+    "X &= f(T_1) + f(T_1+T_2) + f(T_1+T_2+T_3) + \\ldots \\\\\n",
+    " &= \\frac{1}{\\tau}e^{-T_1/\\tau} + \\frac{1}{\\tau}e^{-(T_1+T_2)/\\tau} + \n",
+    "     \\frac{1}{\\tau}e^{-(T_1+T_2+T_3)/\\tau} + \\ldots \\\\\n",
+    " &= \\frac{1}{\\tau}\\left(e^{-T_1/\\tau}+e^{-T_1/\\tau}e^{-T_2/\\tau}+\n",
+    "     e^{-T_1/\\tau}e^{-T_2/\\tau}e^{-T_3/\\tau} + \\ldots\\right) \\\\\n",
+    " &= \\frac{1}{\\tau}\\sum_{i=1}^\\infty\\prod_{j=1}^ie^{-T_j/\\tau}\n",
     "\\end{align*}"
    ]
   },
@@ -149,13 +151,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We are interested in the expected value and variance of the filtered renewal process. \n",
+    "The expected value is then\n",
     "\n",
     "\\begin{align*}\n",
-    "E[X] &= E\\left[\\frac{1}{\\tau}\\sum_{i=1}^\\infty\\prod_{j=1}^ie^{-t_i/\\tau}\\right] \\\\\n",
-    " &= \\frac{1}{\\tau}\\sum_{i=1}^\\infty E\\left[\\prod_{j=1}^ie^{-t_i/\\tau}\\right] & \\text{expectation is linear} \\\\\n",
-    " &= \\frac{1}{\\tau}\\sum_{i=1}^\\infty\\prod_{j=1}^iE\\left[e^{-t_i/\\tau}\\right] & \\text{intervals are iid} \\\\\n",
-    " &= \\frac{1}{\\tau}\\sum_{i=1}^\\infty E\\left[e^{-t_i/\\tau}\\right]^i \\\\\n",
+    "E[X] &= E\\left[\\frac{1}{\\tau}\\sum_{i=1}^\\infty\\prod_{j=1}^ie^{-T_j/\\tau}\\right] \\\\\n",
+    " &= \\frac{1}{\\tau}\\sum_{i=1}^\\infty E\\left[\\prod_{j=1}^ie^{-T_j/\\tau}\\right] & \\text{expectation is linear} \\\\\n",
+    " &= \\frac{1}{\\tau}\\sum_{i=1}^\\infty\\prod_{j=1}^iE\\left[e^{-T_j/\\tau}\\right] & \\text{intervals are independent} \\\\\n",
+    " &= \\frac{1}{\\tau}\\sum_{i=1}^\\infty E\\left[e^{-T/\\tau}\\right]^i & \\text{intervals are identically distributed} \\\\\n",
     "\\end{align*}"
    ]
   },
@@ -163,27 +165,67 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "To calculate the variance, we use $\\Var(X)=E[X^2]-E[X]^2$. To find $E[X^2]$, we start by expanding $X^2$.\n",
+    "\n",
     "\\begin{align*}\n",
-    "E[X^2] = \n",
-    "\\end{align*}"
+    "X^2 &= \\frac{1}{\\tau^2}\\left(e^{-T_1/\\tau}+e^{-T_1/\\tau}e^{-T_2/\\tau}+\n",
+    "    e^{-T_1/\\tau}e^{-T_2/\\tau}e^{-T_3/\\tau} + \\ldots\\right)\n",
+    "    \\left(e^{-T_1/\\tau}+e^{-T_1/\\tau}e^{-T_2/\\tau}+\n",
+    "    e^{-T_1/\\tau}e^{-T_2/\\tau}e^{-T_3/\\tau} + \\ldots\\right) \\\\\n",
+    " &= \\frac{1}{\\tau^2}\n",
+    "    \\left(e^{-2T_1/\\tau}+e^{-2T_1/\\tau}e^{-2T_2/\\tau}+e^{-2T_1/\\tau}e^{-2T_2/\\tau}e^{-2T_3/\\tau}+\\ldots\\right)\n",
+    "    & \\text{diagonal terms} \\\\\n",
+    " &\\quad + \\frac{2}{\\tau^2}\\left(e^{-2T_1/\\tau}e^{-T_2/\\tau}+e^{-2T_1/\\tau}e^{-T_2/\\tau}e^{-T_3/\\tau} + \\ldots +\n",
+    "    e^{-2T_1/\\tau}e^{-2T_2/\\tau}e^{-T_3/\\tau} + \\ldots\\right)\n",
+    "    & \\text{cross terms} \\\\\n",
+    " &= \\frac{1}{\\tau^2}\\sum_{i=1}^{\\infty}\\prod_{j=1}^{i}e^{-2T_j/\\tau} +\n",
+    "    \\frac{2}{\\tau^2}\\sum_{i=1}^{\\infty}\\sum_{k=i+1}^{\\infty}\n",
+    "    \\left(\\prod_{j=1}^ie^{-2T_j/\\tau}\\right)\\left(\\prod_{m=i+1}^{k}e^{-T_m/\\tau}\\right) \\\\\n",
+    " &= \\frac{1}{\\tau^2}\\sum_{i=1}^{\\infty}\\prod_{j=1}^{i}e^{-2T_j/\\tau} +\n",
+    "    \\frac{2}{\\tau^2}\\sum_{i=1}^{\\infty}\\left(\\prod_{j=1}^ie^{-2T_j/\\tau}\\right)\n",
+    "    \\sum_{k=i+1}^{\\infty}\\left(\\prod_{m=i+1}^{k}e^{-T_m/\\tau}\\right) \\\\\n",
+    "\\end{align*}\n",
+    "\n",
+    "Now,\n",
+    "\n",
+    "\\begin{align*}\n",
+    "E[X^2] &= E\\left[\\frac{1}{\\tau^2}\\sum_{i=1}^{\\infty}\\prod_{j=1}^{i}e^{-2T_j/\\tau} +\n",
+    "    \\frac{2}{\\tau^2}\\sum_{i=1}^{\\infty}\\left(\\prod_{j=1}^ie^{-2T_j/\\tau}\\right)\n",
+    "    \\sum_{k=i+1}^{\\infty}\\left(\\prod_{m=i+1}^{k}e^{-T_m/\\tau}\\right)\\right] \\\\\n",
+    " &= \\frac{1}{\\tau^2}\\sum_{i=1}^{\\infty}E\\left[e^{-2T/\\tau}\\right]^i +\n",
+    "    \\frac{2}{\\tau^2}\\sum_{i=1}^{\\infty}E\\left[e^{-2T/\\tau}\\right]^i\n",
+    "    \\sum_{k=i+1}^{\\infty}\\left(\\prod_{m=i+1}^{k}E\\left[e^{-T_m/\\tau}\\right]\\right) \\\\\n",
+    " &= \\frac{1}{\\tau^2}\\sum_{i=1}^{\\infty}E\\left[e^{-2T/\\tau}\\right]^i +\n",
+    "    \\frac{2}{\\tau^2}\\sum_{i=1}^{\\infty}E\\left[e^{-2T/\\tau}\\right]^i\n",
+    "    \\sum_{k=i+1}^{\\infty}E\\left[e^{-T/\\tau}\\right]^{k-i} \\\\\n",
+    "\\end{align*}\n",
+    "\n",
+    "Therefore, an overall expression for the variance will be given by\n",
+    "\n",
+    "$$\n",
+    "\\Var(X) = \\frac{1}{\\tau^2}\\sum_{i=1}^{\\infty}E\\left[e^{-2T/\\tau}\\right]^i +\n",
+    "    \\frac{2}{\\tau^2}\\sum_{i=1}^{\\infty}E\\left[e^{-2T/\\tau}\\right]^i\n",
+    "    \\sum_{k=i+1}^{\\infty}E\\left[e^{-T/\\tau}\\right]^{k-i} -\n",
+    "    \\left(\\frac{1}{\\tau}\\sum_{i=1}^\\infty E\\left[e^{-T/\\tau}\\right]^i\\right)^2\n",
+    "$$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Crosscheck filtered renewal equations with filtered Poisson process\n",
+    "### Checking the filtered renewal equations with a Poisson process\n",
     "\n",
-    "With the Poisson process $t_i$ are iid and $t_i\\sim Exp(\\lambda)$.\n",
+    "With the Poisson process $T_i$ are iid and $T_i\\sim Exp(\\lambda)$.\n",
     "\n",
-    "We see $E\\left[e^{-t_i/\\tau}\\right]$ and $E\\left[e^{-2t_i/\\tau}\\right]$ in the expressions we've derived. Let's find a general expression for $E\\left[e^{-kt_i/\\tau}\\right]$\n",
+    "We see $E\\left[e^{-T/\\tau}\\right]$ and $E\\left[e^{-2T/\\tau}\\right]$ in the expressions we've derived for the mean and variance. Let's find a general expression for $E\\left[e^{-kT/\\tau}\\right]$ and then use this expression for $k=1$ and $k=2$\n",
     "\n",
     "\\begin{align*}\n",
-    "E\\left[e^{-kt/\\tau}\\right] &= \\int_{-\\infty}^{\\infty}e^{-kt/\\tau}f_{T}(t)dt \\\\\n",
+    "E\\left[e^{-kT/\\tau}\\right] &= \\int_{-\\infty}^{\\infty}e^{-kt/\\tau}f_{T}(t)dt \\\\\n",
     " &= \\int_{0}^{\\infty}e^{-kt/\\tau}\\lambda e^{-\\lambda t}dt \\\\\n",
     " &= \\lambda\\int_{0}^{\\infty}e^{-t(k/\\tau+\\lambda)}dt \\\\\n",
-    " &= \\frac{-\\lambda}{(k/\\tau+\\lambda)}\\left[e^{-t(k/\\tau+\\lambda)}\\right]_0^\\infty \\\\\n",
-    " &= \\frac{\\lambda}{(k/\\tau+\\lambda)} \\\\\n",
+    " &= \\frac{-\\lambda}{k/\\tau+\\lambda}\\left[e^{-t(k/\\tau+\\lambda)}\\right]_0^\\infty \\\\\n",
+    " &= \\frac{\\lambda}{k/\\tau+\\lambda} \\\\\n",
     " &= \\frac{\\lambda\\tau}{k+\\lambda\\tau} \\\\\n",
     "\\end{align*}"
    ]
@@ -192,17 +234,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Plugging into the equation for expectation,\n",
+    "Plugging into the equation for the expected value,\n",
     "\n",
     "\\begin{align*}\n",
-    "E[X] &= \\frac{1}{\\tau}\\sum_{i=1}^\\infty E\\left[e^{-t_i/\\tau}\\right]^i  \\\\\n",
+    "E[X] &= \\frac{1}{\\tau}\\sum_{i=1}^\\infty E\\left[e^{-T/\\tau}\\right]^i  \\\\\n",
     " &= \\frac{1}{\\tau}\\sum_{i=1}^\\infty\\left(\\frac{\\lambda\\tau}{1+\\lambda\\tau}\\right)^i \\\\\n",
     " &= \\frac{1}{\\tau}\\frac{\\frac{\\lambda\\tau}{1+\\lambda\\tau}}{1-\\frac{\\lambda\\tau}{1+\\lambda\\tau}} \\\\\n",
     " &= \\frac{1}{\\tau}\\frac{\\lambda\\tau}{1+\\lambda\\tau-\\lambda\\tau} \\\\\n",
+    " &= \\frac{1}{\\tau}\\frac{\\lambda\\tau}{1} \\\\\n",
     " &= \\lambda\n",
     "\\end{align*}\n",
     "\n",
-    "The sum converges because $\\lambda$ and $\\tau$ are both positive numbers, so $0\\le\\frac{\\lambda\\tau}{1+\\lambda\\tau}<1$"
+    "The sum converges because $\\lambda$ and $\\tau$ are both positive numbers so $0\\le\\frac{\\lambda\\tau}{1+\\lambda\\tau}<1$. The expected value matches what we derived in the Poisson synapse [notebook](http://nbviewer.ipython.org/github/fragapanagos/notebooks/blob/master/synapse/synapse_SNR_poisson.ipynb)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now for the second moment,\n",
+    "\n",
+    "\\begin{align*}\n",
+    "E[X^2] &= \\frac{1}{\\tau^2}\\sum_{i=1}^{\\infty}E\\left[e^{-2T/\\tau}\\right]^i +\n",
+    "    \\frac{2}{\\tau^2}\\sum_{i=1}^{\\infty}E\\left[e^{-2T/\\tau}\\right]^i\n",
+    "    \\sum_{k=i+1}^{\\infty}E\\left[e^{-T/\\tau}\\right]^{k-i} \\\\\n",
+    " &= \\frac{1}{\\tau^2}\\sum_{i=1}^{\\infty}\\left(\\frac{\\lambda\\tau}{2+\\lambda\\tau}\\right)^i +\n",
+    "    \\frac{2}{\\tau^2}\\sum_{i=1}^{\\infty}\\left(\\frac{\\lambda\\tau}{2+\\lambda\\tau}\\right)^i\n",
+    "    \\sum_{k=i+1}^{\\infty}\\left(\\frac{\\lambda\\tau}{1+\\lambda\\tau}\\right)^{k-i} \\\\\n",
+    " &= \\frac{1}{\\tau^2}\\frac{\\lambda\\tau}{2} +\n",
+    "    \\frac{2}{\\tau^2}\\sum_{i=1}^{\\infty}\\left(\\frac{\\lambda\\tau}{2+\\lambda\\tau}\\right)^i\n",
+    "    \\lambda\\tau \\\\\n",
+    " &= \\frac{\\lambda}{2\\tau} +\n",
+    "    \\frac{2\\lambda}{\\tau}\\sum_{i=1}^{\\infty}\\left(\\frac{\\lambda\\tau}{2+\\lambda\\tau}\\right)^i \\\\\n",
+    " &= \\frac{\\lambda}{2\\tau} + \\frac{2\\lambda}{\\tau}\\frac{\\lambda\\tau}{2} \\\\\n",
+    " &= \\frac{\\lambda}{2\\tau} + \\lambda^2 \\\\\n",
+    "\\end{align*}\n",
+    "\n",
+    "Therefore,\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\Var(X) &= \\frac{\\lambda}{2\\tau} + \\lambda^2 - \\lambda^2 \\\\\n",
+    " &= \\frac{\\lambda}{2\\tau}\n",
+    "\\end{align*}\n",
+    "\n",
+    "which also matches what we derived in the Poisson synapse [notebook](http://nbviewer.ipython.org/github/fragapanagos/notebooks/blob/master/synapse/synapse_SNR_poisson.ipynb)."
    ]
   },
   {
@@ -233,7 +308,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.9"
+   "version": "2.7.3"
   }
  },
  "nbformat": 4,
