renewal process factorize second moment expression

--- a/theory/campbell_theorem.ipynb
+++ b/theory/campbell_theorem.ipynb
@@ -121,8 +121,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Filtered Renewal processes\n",
-    "\n",
+    "# Filtered Renewal processes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Renewal processes are generalizations of the Poisson point process. In the Poisson point process, each interval between events is independent and identically distributed according to the exponential distribution. In a renewal process, intervals are also idependent and identically distributed, but the distribution is not restricted to be exponential.\n",
     "\n",
     "Synaptic statistics can be described by a filtered renewal process where the filter is given by \n",
@@ -135,7 +140,28 @@
     "\\end{cases}\n",
     "$$\n",
     "\n",
-    "and the incoming spike statistics are modeled by the renewal process. We are interested in the expected value and variance of the filtered renewal process. Our filtered process will be given by\n",
+    "and the incoming spike statistics are modeled by the renewal process. We are interested in the expected value and variance of the filtered renewal process. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"display:block; border: 1px solid black; padding: 15px;background-color: #EEEEFF;margin: 10px\">\n",
+    "<h2> Summary of results</h2>\n",
+    "\\begin{align*}\n",
+    "E[X] &= \\frac{1}{\\tau}\\sum_{i=1}^\\infty E\\left[e^{-T/\\tau}\\right]^i \\\\\n",
+    "E[X^2] &= \\frac{1}{\\tau^2}\\sum_{i=1}^{\\infty}E\\left[e^{-2T/\\tau}\\right]^i\\left(1 +\n",
+    "    2\\sum_{j=1}^{\\infty}E\\left[e^{-T/\\tau}\\right]^{j}\\right) \\\\\n",
+    "\\end{align*}\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Our filtered point process will be given by\n",
     "\n",
     "\\begin{align*}\n",
     "X &= f(T_1) + f(T_1+T_2) + f(T_1+T_2+T_3) + \\ldots \\\\\n",
@@ -198,14 +224,18 @@
     " &= \\frac{1}{\\tau^2}\\sum_{i=1}^{\\infty}E\\left[e^{-2T/\\tau}\\right]^i +\n",
     "    \\frac{2}{\\tau^2}\\sum_{i=1}^{\\infty}E\\left[e^{-2T/\\tau}\\right]^i\n",
     "    \\sum_{k=i+1}^{\\infty}E\\left[e^{-T/\\tau}\\right]^{k-i} \\\\\n",
+    " &= \\frac{1}{\\tau^2}\\sum_{i=1}^{\\infty}E\\left[e^{-2T/\\tau}\\right]^i +\n",
+    "    \\frac{2}{\\tau^2}\\sum_{i=1}^{\\infty}E\\left[e^{-2T/\\tau}\\right]^i\n",
+    "    \\sum_{n=1}^{\\infty}E\\left[e^{-T/\\tau}\\right]^{n} & \\text{substituting }n=k-i \\\\\n",
+    " &= \\frac{1}{\\tau^2}\\sum_{i=1}^{\\infty}E\\left[e^{-2T/\\tau}\\right]^i\\left(1 +\n",
+    "    2\\sum_{n=1}^{\\infty}E\\left[e^{-T/\\tau}\\right]^{n}\\right) \\\\\n",
     "\\end{align*}\n",
     "\n",
     "Therefore, an overall expression for the variance will be given by\n",
     "\n",
     "$$\n",
-    "\\Var(X) = \\frac{1}{\\tau^2}\\sum_{i=1}^{\\infty}E\\left[e^{-2T/\\tau}\\right]^i +\n",
-    "    \\frac{2}{\\tau^2}\\sum_{i=1}^{\\infty}E\\left[e^{-2T/\\tau}\\right]^i\n",
-    "    \\sum_{k=i+1}^{\\infty}E\\left[e^{-T/\\tau}\\right]^{k-i} -\n",
+    "\\Var(X) = \\frac{1}{\\tau^2}\\sum_{i=1}^{\\infty}E\\left[e^{-2T/\\tau}\\right]^i\\left(1 +\n",
+    "    2\\sum_{n=1}^{\\infty}E\\left[e^{-T/\\tau}\\right]^{n}\\right) -\n",
     "    \\left(\\frac{1}{\\tau}\\sum_{i=1}^\\infty E\\left[e^{-T/\\tau}\\right]^i\\right)^2\n",
     "$$"
    ]
@@ -255,19 +285,12 @@
     "Now for the second moment,\n",
     "\n",
     "\\begin{align*}\n",
-    "E[X^2] &= \\frac{1}{\\tau^2}\\sum_{i=1}^{\\infty}E\\left[e^{-2T/\\tau}\\right]^i +\n",
-    "    \\frac{2}{\\tau^2}\\sum_{i=1}^{\\infty}E\\left[e^{-2T/\\tau}\\right]^i\n",
-    "    \\sum_{k=i+1}^{\\infty}E\\left[e^{-T/\\tau}\\right]^{k-i} \\\\\n",
-    " &= \\frac{1}{\\tau^2}\\sum_{i=1}^{\\infty}\\left(\\frac{\\lambda\\tau}{2+\\lambda\\tau}\\right)^i +\n",
-    "    \\frac{2}{\\tau^2}\\sum_{i=1}^{\\infty}\\left(\\frac{\\lambda\\tau}{2+\\lambda\\tau}\\right)^i\n",
-    "    \\sum_{k=i+1}^{\\infty}\\left(\\frac{\\lambda\\tau}{1+\\lambda\\tau}\\right)^{k-i} \\\\\n",
-    " &= \\frac{1}{\\tau^2}\\frac{\\lambda\\tau}{2} +\n",
-    "    \\frac{2}{\\tau^2}\\sum_{i=1}^{\\infty}\\left(\\frac{\\lambda\\tau}{2+\\lambda\\tau}\\right)^i\n",
-    "    \\lambda\\tau \\\\\n",
-    " &= \\frac{\\lambda}{2\\tau} +\n",
-    "    \\frac{2\\lambda}{\\tau}\\sum_{i=1}^{\\infty}\\left(\\frac{\\lambda\\tau}{2+\\lambda\\tau}\\right)^i \\\\\n",
-    " &= \\frac{\\lambda}{2\\tau} + \\frac{2\\lambda}{\\tau}\\frac{\\lambda\\tau}{2} \\\\\n",
-    " &= \\frac{\\lambda}{2\\tau} + \\lambda^2 \\\\\n",
+    "E[X^2] &= \\frac{1}{\\tau^2}\\sum_{i=1}^{\\infty}E\\left[e^{-2T/\\tau}\\right]^i\\left(1 +\n",
+    "    2\\sum_{j=1}^{\\infty}E\\left[e^{-T/\\tau}\\right]^{j}\\right) \\\\\n",
+    " &= \\frac{1}{\\tau^2}\\sum_{i=1}^{\\infty}\\left(\\frac{\\lambda\\tau}{2+\\lambda\\tau}\\right)^i\\left(1 +\n",
+    "    2\\sum_{j=1}^{\\infty}\\left(\\frac{\\lambda\\tau}{1+\\lambda\\tau}\\right)^{j}\\right) \\\\\n",
+    " &= \\frac{1}{\\tau^2}\\frac{\\lambda\\tau}{2}\\left(1+2\\lambda\\tau\\right) \\\\\n",
+    " &= \\frac{\\lambda}{2\\tau}+\\lambda^2 \\\\\n",
     "\\end{align*}\n",
     "\n",
     "Therefore,\n",
@@ -308,7 +331,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.3"
+   "version": "2.7.9"
   }
  },
  "nbformat": 4,
