fill out synapse SNR gamma mean var

--- a/synapse/synapse_SNR_gamma.ipynb
+++ b/synapse/synapse_SNR_gamma.ipynb
@@ -4,43 +4,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Notebook description"
+    "# Notebook description\n",
+    "<!---define operatorname var-->\n",
+    "$\\DeclareMathOperator{\\Var}{Var}$\n",
+    "<!---define operatorname var-->"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook looks at the signal to noise ratio (SNR) of a synapse with Poisson input spike train with frequency $\\lambda$. [Here](http://nbviewer.ipython.org/github/fragapanagos/notebooks/blob/master/synapse/synapse_SNR_uniform.ipynb) is a notebook considering a synapse with uniform input spikes and [here](http://nbviewer.ipython.org/github/fragapanagos/notebooks/blob/master/synapse/synapse_SNR_uniform.ipynb) is a notebook considering a synapse with $p$-thinned uniform input spikes\n",
+    "This notebook looks at the signal to noise ratio (SNR) of a synapse with input spike train with frequency $\\lambda$ and interspike intervals (ISIs) following a Gamma distribition.\n",
     "\n",
-    "$$SNR = \\frac{E[X]}{\\sqrt{\\operatorname{Var}(X)}}$$\n",
+    "The pdf of the gamma distribution is given by\n",
+    "$$\n",
+    "f_X(x) = \\frac{\\lambda^k}{\\Gamma(k)}x^{k-1}e^{-\\lambda x}\n",
+    "$$\n",
     "\n",
-    "at the steady state where $X$ is a random variable describing the state of the synapse.\n",
-    "\n",
-    "The synapse is a first order lowpass filter described by\n",
-    "$$\\tau\\dot{x}=-x+\\sum_i\\delta(t-t_i)$$\n",
-    "\n",
-    "where $\\tau$ is the synaptic time constant and $t_i$ describes the arrival time of the $i$th spike. [Here](http://nbviewer.ipython.org/github/fragapanagos/notebooks/blob/master/synapse/synapse_demo.ipynb) is a notebook demoing a synapse. Since the input spikes are Poisson, the inter-arrival time (a.k.a. inter-spike time (ISI)) is distributed exponentially.\n",
-    "\n",
-    "Our approach is to consider $X$ at an arbitrary point in time. The $i$th spike that arrived prior to this point in time contributes \n",
-    "\n",
-    "$$\\frac{1}{\\tau}e^{-t_i/\\tau}$$\n",
-    "\n",
-    "to the synapse's current state. Note that $t_i$ is now the time since the arrival of the $i$th spike. The value of the synapse is then\n",
-    "\n",
-    "$$x=\\sum_{i=1}^{\\infty} \\frac{1}{\\tau}e^{-t_i/\\tau}.$$\n",
-    "\n",
-    "To deal with the $\\infty$, we will first consider another random variable $Y$ that only looks back $k\\tau$ back in time such that \n",
-    "\n",
-    "$$y=\\sum_{i=1}^{N} \\frac{1}{\\tau}e^{-t_i/\\tau}.$$\n",
-    "\n",
-    "where $N$ is a random variable representing the number of spikes received within $k\\tau$ of the present time.\n",
-    "\n",
-    "From here \n",
+    "We are particularly interested in cases when $k$ is a positive integer, in which case\n",
     "\n",
     "$$\n",
-    "x = \\lim_{k\\rightarrow\\infty}y\n",
-    "$$"
+    "f_X(x) = \\frac{\\lambda^k}{(k-1)!}x^{k-1}e^{-\\lambda x}\n",
+    "$$\n",
+    "\n",
+    "which is the pdf of the Erlang distribution."
    ]
   },
   {
@@ -55,11 +42,11 @@
    "metadata": {},
    "source": [
     "<div style=\"display:block; border: 1px solid black; padding: 15px;background-color: #EEEEFF;margin: 10px\">\n",
-    "\\begin{align}\n",
-    "E[X] &= \\lambda \\\\\n",
-    "\\operatorname{Var}(X) &= \\frac{\\lambda}{2\\tau} \\\\\n",
-    "SNR &= \\sqrt{2\\lambda\\tau} \\\\\n",
-    "\\end{align}\n",
+    "\\begin{align*}\n",
+    "E[X] &= \\\\\n",
+    "\\Var(X) &=  \\\\\n",
+    "SNR &=  \\\\\n",
+    "\\end{align*}\n",
     "</div>"
    ]
   },
@@ -74,6 +61,54 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "We [know](http://nbviewer.ipython.org/github/fragapanagos/notebooks/blob/master/theory/campbell_theorem.ipynb#Filtered-Renewal-processes) that first-order, low-passed filtered renewal processes have moments\n",
+    "\\begin{align*}\n",
+    "E[X] &= \\frac{1}{\\tau}\\sum_{i=1}^\\infty E\\left[e^{-T/\\tau}\\right]^i \\\\\n",
+    "E[X^2] &= \\frac{1}{\\tau^2}\\sum_{i=1}^{\\infty}E\\left[e^{-2T/\\tau}\\right]^i\\left(1 +\n",
+    "    2\\sum_{j=1}^{\\infty}E\\left[e^{-T/\\tau}\\right]^{j}\\right) \\\\\n",
+    "\\end{align*}\n",
+    "\n",
+    "Therefore, our first steps will be to compute $E\\left[e^{-2T/\\tau}\\right]$ and $E\\left[e^{-T/\\tau}\\right]$, or rather $E\\left[e^{-cT/\\tau}\\right]$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\\begin{align*}\n",
+    "E[e^{-cT/\\tau}] &= \\int_{-\\infty}^{\\infty}e^{-ct/\\tau}f_T(t)dt \\\\\n",
+    " &= \\int_{0}^{\\infty}e^{-ct/\\tau}\\frac{\\lambda^k}{\\Gamma(k)}t^{k-1}e^{-\\lambda t}dt \\\\\n",
+    " &= \\frac{\\lambda^k}{\\Gamma(k)}\\int_{0}^{\\infty}t^{k-1}e^{-ct/\\tau}e^{-\\lambda t}dt \\\\\n",
+    " &= \\frac{\\lambda^k}{\\Gamma(k)}\\int_{0}^{\\infty}t^{k-1}e^{-t(c/\\tau-\\lambda)}dt \\\\\n",
+    " &= \\frac{\\lambda^k}{\\Gamma(k)}\\int_{0}^{\\infty}\\left(\\frac{\\tau}{c-\\lambda\\tau}z\\right)^{k-1}\n",
+    "     e^{-z}\\frac{\\tau}{c-\\lambda\\tau}dz & \\text{(see below) where } z = t(c/\\tau-\\lambda) \\\\\n",
+    " &= \\frac{\\lambda^k}{\\Gamma(k)}\\int_{0}^{\\infty}\\left(\\frac{\\tau}{c-\\lambda\\tau}\\right)^kz^{k-1}e^{-z}dz \\\\\n",
+    " &= \\frac{\\lambda^k}{\\Gamma(k)}\\left(\\frac{\\tau}{c-\\lambda\\tau}\\right)^k\\int_{0}^{\\infty}z^{k-1}e^{-z}dz \\\\\n",
+    " &= \\frac{\\lambda^k}{\\Gamma(k)}\\left(\\frac{\\tau}{c-\\lambda\\tau}\\right)^k\\Gamma(k) \\\\\n",
+    " &= \\left(\\frac{\\lambda\\tau}{c-\\lambda\\tau}\\right)^k \\\\\n",
+    "\\end{align*}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here, we expand on our substitution of $z$ for $t$.\n",
+    "\n",
+    "\\begin{align*}\n",
+    "z &= t(c/\\tau-\\lambda) \\\\\n",
+    " &= t\\frac{c-\\lambda\\tau}{\\tau} \\\\\n",
+    "\\frac{\\tau}{c-\\lambda\\tau}z &= t \\\\\n",
+    "\\frac{\\tau}{c-\\lambda\\tau}dz &= dt \\\\\n",
+    "\\end{align*}\n",
+    "\n",
+    "Note that this substitution requires $c>\\lambda\\tau$ for the limits to be consistent."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Synapse mean"
    ]
   },
@@ -81,41 +116,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{aligned}\n",
-    "E[Y] &= E\\left[\\sum_{i=1}^{N}\\frac{1}{\\tau}e^{-t_i/\\tau}\\right] \\\\\n",
-    " &= E\\left[E\\left[\\sum_{i=1}^{N}\\frac{1}{\\tau}e^{-t_i/\\tau}\\bigg|N\\right]\\right]\\qquad\\text{law of total expectation} \\\\\n",
-    " &= E\\left[\\sum_{i=1}^{N}E\\left[\\frac{1}{\\tau}e^{-t_i/\\tau}\\bigg|N\\right]\\right] \\\\\n",
-    " &= E\\left[\\sum_{i=1}^{N}E\\left[\\frac{1}{\\tau}e^{-t_i/\\tau}\\right]\\right] \\\\\n",
-    " &= E\\left[\\sum_{i=1}^{N}1\\right]E\\left[\\frac{1}{\\tau}e^{-t_i/\\tau}\\right] \\\\\n",
-    " &= E[N]E\\left[\\frac{1}{\\tau}e^{-t_i/\\tau}\\right] \\\\\n",
-    "\\end{aligned}\n",
+    "\\begin{align*}\n",
+    "E[X] &= \\frac{1}{\\tau}\\sum_{i=1}^\\infty E\\left[e^{-T/\\tau}\\right]^i \\\\\n",
+    " &= \\frac{1}{\\tau}\\sum_{i=1}^\\infty\\left(\\frac{\\lambda\\tau}{1-\\lambda\\tau}\\right)^{ki} \\\\\n",
+    " &= \\frac{1}{\\tau}\\frac{\\left(\\frac{\\lambda\\tau}{1-\\lambda\\tau}\\right)^k}\n",
+    "     {1-\\left(\\frac{\\lambda\\tau}{1-\\lambda\\tau}\\right)^k} &\n",
+    "     \\text{(see below) assuming } \\left|\\frac{\\lambda\\tau}{1-\\lambda\\tau}\\right|<1 \\\\\n",
+    " &= \\frac{1}{\\tau}\\frac{(\\lambda\\tau)^k}{(1-\\lambda\\tau)^k-(\\lambda\\tau)^k}\n",
+    "\\end{align*}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here, we look at the implications of our assumption required for the summation to converge\n",
     "\n",
-    "Since the impulse response is a decaying exponential, it never reaches 0. To avoid having to then consider all spikes since the beginning of time,  we make the simplifying assumption that the impulse response is negligible after a certain time. That is, we only consider spikes within $k\\tau$ of the current time, where $k$ is an arbitrary, positive value. The higher $k$ is, the further back in time we consider. As $N$ is the number of spikes from a Poisson spike train with rate $\\lambda$ received within $k\\tau$, $E[N]=\\lambda k\\tau$. In addition, spike times within a time period are uniform for a Poisson spike train, so $t_i$ is uniform and\n",
+    "$$\n",
+    "\\left|\\frac{\\lambda\\tau}{1-\\lambda\\tau}\\right|<1\n",
+    "$$\n",
     "\n",
-    "\\begin{aligned}\n",
-    "E\\left[\\frac{1}{\\tau}e^{-t_i/\\tau}\\right] &= \\int_0^{k\\tau}\\frac{1}{k\\tau}\\frac{1}{\\tau}e^{-t_i/\\tau}dt_i \\\\\n",
-    " &= \\frac{1}{k\\tau}\\int_0^{k\\tau}\\frac{1}{\\tau}e^{-t_i/\\tau}dt_i \\\\\n",
-    " &= \\frac{1}{k\\tau}\\left(1-e^{-k\\tau/\\tau}\\right) \\\\\n",
-    " &=  \\frac{1}{k\\tau}\\left(1-e^{-k}\\right)\n",
-    "\\end{aligned}\n",
+    "becomes\n",
     "\n",
-    "Therefore \n",
+    "\\begin{align*}\n",
+    "\\frac{\\lambda\\tau}{1-\\lambda\\tau} &< 1 \\\\\n",
+    "\\lambda\\tau &< 1-\\lambda\\tau \\\\\n",
+    "\\lambda\\tau &< \\frac{1}{2} \\\\\n",
+    "\\end{align*}\n",
     "\n",
-    "\\begin{aligned}\n",
-    "E[Y] &= E[N] E\\left[\\frac{1}{\\tau}e^{-t_i/\\tau}\\right] \\\\\n",
-    " &= \\lambda k\\tau \\frac{1}{k\\tau}\\left(1-e^{-k}\\right) \\\\\n",
-    " &= \\lambda \\left(1-e^{-k}\\right)\n",
-    "\\end{aligned}\n",
+    "or\n",
     "\n",
-    "Taking the limit as $k$ tends to infinity yields\n",
+    "\\begin{align*}\n",
+    "-\\frac{\\lambda\\tau}{1-\\lambda\\tau} &< 1 \\\\\n",
+    "\\frac{\\lambda\\tau}{1-\\lambda\\tau} &\\ge -1 \\\\\n",
+    "\\lambda\\tau &\\ge -1+\\lambda\\tau \\\\\n",
+    "0 &\\ge -1 \\\\\n",
+    "\\end{align*}\n",
     "\n",
-    "\\begin{aligned}\n",
-    "E[X] &= \\lim_{k\\rightarrow\\infty}E[Y] \\\\\n",
-    " &= \\lim_{k\\rightarrow\\infty}\\lambda \\left(1-e^{-k}\\right) \\\\\n",
-    "E[X] &=\\lambda\n",
-    "\\end{aligned}\n",
-    "\n",
-    "as would be expected."
+    "which is trivally true. Therefore, we only require that $\\lambda\\tau<\\frac{1}{2}$ (i.e. less than 1 spike per $\\tau$).\n"
    ]
   },
   {
@@ -129,114 +167,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "By definition, \n",
+    "\\begin{align*}\n",
+    "E[X^2] &= \\frac{1}{\\tau^2}\\sum_{i=1}^{\\infty}E\\left[e^{-2T/\\tau}\\right]^i\\left(1 +\n",
+    "    2\\sum_{j=1}^{\\infty}E\\left[e^{-T/\\tau}\\right]^{j}\\right) \\\\\n",
+    " &= \\frac{1}{\\tau^2}\\sum_{i=1}^{\\infty}\\left(\\frac{\\lambda\\tau}{2-\\lambda\\tau}\\right)^{ki}\\left(1 +\n",
+    "    2\\sum_{j=1}^{\\infty}\\left(\\frac{\\lambda\\tau}{1-\\lambda\\tau}\\right)^{kj}\\right) \\\\\n",
+    " &= \\frac{1}{\\tau^2}\\frac{(\\lambda\\tau)^k}{(2-\\lambda\\tau)^k-(\\lambda\\tau)^k}\\left(1 +\n",
+    "    2\\frac{(\\lambda\\tau)^k}{(1-\\lambda\\tau)^k-(\\lambda\\tau)^k}\\right) \\\\\n",
+    " &= \\frac{1}{\\tau^2}\\left(\\frac{(\\lambda\\tau)^k}{(2-\\lambda\\tau)^k-(\\lambda\\tau)^k} +\n",
+    "    2\\frac{(\\lambda\\tau)^k}{(2-\\lambda\\tau)^k-(\\lambda\\tau)^k}\n",
+    "    \\frac{(\\lambda\\tau)^k}{(1-\\lambda\\tau)^k-(\\lambda\\tau)^k}\\right) \\\\\n",
+    " &= \\frac{1}{\\tau^2}\\left(\\frac{(\\lambda\\tau)^k\\left[(1-\\lambda\\tau)^k-(\\lambda\\tau)^k\\right]+2(\\lambda\\tau)^{2k}}\n",
+    "    {\\left[(2-\\lambda\\tau)^k-(\\lambda\\tau)^k\\right]\\left[(1-\\lambda\\tau)^k-(\\lambda\\tau)^k\\right]}\\right) \\\\\n",
+    " &= \\frac{1}{\\tau^2}\\left(\\frac{(\\lambda\\tau)^k\\left[(1-\\lambda\\tau)^k+(\\lambda\\tau)^k\\right]}\n",
+    "    {\\left[(2-\\lambda\\tau)^k-(\\lambda\\tau)^k\\right]\\left[(1-\\lambda\\tau)^k-(\\lambda\\tau)^k\\right]}\\right) \\\\\n",
+    "\\end{align*}\n",
     "\n",
-    "$$\\operatorname{Var}(X) = E[X^2] - E[X]^2$$\n",
+    "\\begin{align*}\n",
+    "\\Var(X) &= E[X^2] - E[X]^2 \\\\\n",
+    " &= \\frac{1}{\\tau^2}\\left(\\frac{(\\lambda\\tau)^k\\left[(1-\\lambda\\tau)^k+(\\lambda\\tau)^k\\right]}\n",
+    "    {\\left[(2-\\lambda\\tau)^k-(\\lambda\\tau)^k\\right]\\left[(1-\\lambda\\tau)^k-(\\lambda\\tau)^k\\right]}\\right)\n",
+    "    - \\left(\\frac{1}{\\tau}\\frac{(\\lambda\\tau)^k}{(1-\\lambda\\tau)^k-(\\lambda\\tau)^k}\\right)^2\n",
+    "\\end{align*}\n",
     "\n",
-    "We've determined $E[X]$ already, so let's find $E[X^2]$.\n",
-    "\n",
-    "\\begin{aligned}\n",
-    "E[Y^2] &= E\\left[\\left(\\sum_{i=1}^{N}\\frac{1}{\\tau}e^{-t_i/\\tau}\\right)^2\\right] \\\\\n",
-    " &= E\\left[\\left(\\sum_{i=1}^{N}\\frac{1}{\\tau}e^{-t_i/\\tau}\\right)\\left(\\sum_{j=1}^{N}\\frac{1}{\\tau}e^{-t_j/\\tau}\\right)\\right] \\\\\n",
-    " &= E\\left[\\frac{1}{\\tau^2}\\left(e^{-t_0/\\tau}+e^{-t_1/\\tau}+\\ldots+e^{-t_N/\\tau}\\right)\n",
-    "  \\left(e^{-t_0/\\tau}+e^{-t_1/\\tau}+\\ldots+e^{-t_N/\\tau}\\right)\\right] \\\\\n",
-    " &= E\\left[\\frac{1}{\\tau^2}\\left(\\overbrace{\\sum_{i=0}^{N-1}e^{-2t_i/\\tau}}^{\\text{squared terms}} + \n",
-    "  \\overbrace{\\sum_{i=0,i\\neq j}^{N-1}\\sum_{j=0}^{N-1}e^{-t_i/\\tau}e^{-t_j/\\tau}}^{\\text{cross terms}}\\right)\\right] \\\\\n",
-    " &= E\\left[\\frac{1}{\\tau}\\sum_{i=0}^{N-1}\\frac{1}{\\tau}e^{-2t_i/\\tau}+\n",
-    "  \\sum_{i=0,i\\neq j}^{N-1}\\sum_{j=0}^{N-1}\\frac{1}{\\tau}e^{-t_i/\\tau}\\frac{1}{\\tau}e^{-t_j/\\tau}\\right] \\\\\n",
-    " &= E\\left[\\frac{1}{\\tau}\\sum_{i=0}^{N-1}\\frac{1}{\\tau}e^{-2t_i/\\tau}\\right]+\n",
-    "  E\\left[\\sum_{i=0,i\\neq j}^{N-1}\\sum_{j=0}^{N-1}\\frac{1}{\\tau}e^{-t_i/\\tau}\\frac{1}{\\tau}e^{-t_j/\\tau}\\right] \\\\\n",
-    "\\end{aligned}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "First, let's consider the squared terms. This is very similar to the derivation for $E[Y]$\n",
-    "\n",
-    "\\begin{aligned}\n",
-    "E\\left[\\frac{1}{\\tau}\\sum_{i=0}^{N-1}\\frac{1}{\\tau}e^{-2t_i/\\tau}\\right] &= \n",
-    " \\frac{1}{\\tau}E\\left[\\sum_{i=0}^{N-1}\\frac{1}{\\tau}e^{-2t_i/\\tau}\\right] \\\\\n",
-    " &= \\frac{1}{\\tau}E\\left[E\\left[\\sum_{i=0}^{N-1}\\frac{1}{\\tau}e^{-2t_i/\\tau}\\bigg|N\\right]\\right] \\\\\n",
-    " &= \\frac{1}{\\tau}E[N]E\\left[\\frac{1}{\\tau}e^{-2t_i/\\tau}\\right] \\\\\n",
-    " &= \\frac{1}{\\tau}(\\lambda k\\tau)\\int_0^{k\\tau}\\frac{1}{k\\tau}\\frac{1}{\\tau}e^{-2t_i/\\tau}dt_i \\\\\n",
-    " &= \\frac{\\lambda}{\\tau}\\int_0^{k\\tau}\\frac{1}{\\tau}e^{-2t_i/\\tau}dt_i \\\\\n",
-    " &= \\frac{\\lambda}{2\\tau}\\left(1-e^{-2k\\tau/\\tau}\\right) \\\\\n",
-    " &= \\frac{\\lambda}{2\\tau}\\left(1-e^{-2k}\\right) \\\\\n",
-    "\\end{aligned}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now let's consider the consider the cross terms.\n",
-    "\n",
-    "\\begin{aligned}\n",
-    "E\\left[\\sum_{i=0,i\\neq j}^{N-1}\\sum_{j=0}^{N-1}\\frac{1}{\\tau}e^{-t_i/\\tau}\\frac{1}{\\tau}e^{-t_j/\\tau}\\right] &=\n",
-    "   E\\left[E\\left[\\sum_{i=0,i\\neq j}^{N-1}\\sum_{j=0}^{N-1}\\frac{1}{\\tau}e^{-t_i/\\tau}\\frac{1}{\\tau}e^{-t_j/\\tau}\\bigg|N\\right]\\right] \\\\\n",
-    "  &= E\\left[\\sum_{i=0,i\\neq j}^{N-1}\\sum_{j=0}^{N-1}E\\left[\\frac{1}{\\tau}e^{-t_i/\\tau}\\frac{1}{\\tau}e^{-t_j/\\tau}\\bigg|N\\right]\\right] \\\\\n",
-    "  &= E\\left[\\sum_{i=0,i\\neq j}^{N-1}\\sum_{j=0}^{N-1}E\\left[\\frac{1}{\\tau}e^{-t_i/\\tau}\\frac{1}{\\tau}e^{-t_j/\\tau}\\right]\\right] \\\\\n",
-    "  &= E\\left[\\sum_{i=0,i\\neq j}^{N-1}\\sum_{j=0}^{N-1}1\\right]E\\left[\\frac{1}{\\tau}e^{-t_i/\\tau}\\frac{1}{\\tau}e^{-t_j/\\tau}\\right] \\\\\n",
-    "  &= E\\left[N^2-N\\right]E\\left[\\frac{1}{\\tau}e^{-t_i/\\tau}\\frac{1}{\\tau}e^{-t_j/\\tau}\\right] \\\\\n",
-    "  &= \\left(E\\left[N^2\\right]-E[N]\\right)E\\left[\\frac{1}{\\tau}e^{-t_i/\\tau}\\right]E\\left[\\frac{1}{\\tau}e^{-t_j/\\tau}\\right]\n",
-    "   \\quad i\\neq j \\ \\text{ so } t_i, t_j \\text{ are independent} \\\\\n",
-    "  &= \\left(E\\left[N^2\\right]-E[N]\\right)\\frac{1}{k\\tau}\\left(1-e^{-k}\\right)\\frac{1}{k\\tau}\\left(1-e^{-k}\\right) \\\\\n",
-    "  &= \\left(E\\left[N^2\\right]-E[N]\\right)\\frac{1}{k^2\\tau^2}\\left(1-e^{-k}\\right)^2 \\\\\n",
-    "\\end{aligned}\n",
-    "\n",
-    "For poisson random variable $N$ with parameter $\\lambda k\\tau$, $\\operatorname{Var}(N)=E[N]=\\lambda k\\tau$\n",
-    "\n",
-    "\\begin{aligned}\n",
-    "\\lambda k\\tau &= E\\left[N^2\\right]-E[N]^2 \\\\\n",
-    " &= E\\left[N^2\\right] - (\\lambda k\\tau)^2 \\\\\n",
-    "E\\left[N^2\\right] &= \\lambda k\\tau + (\\lambda k\\tau)^2 \n",
-    "\\end{aligned}\n",
-    "\n",
-    "Returning to the Expected cross term derivation\n",
-    "\n",
-    "\\begin{aligned}\n",
-    "E\\left[\\sum_{i=0,i\\neq j}^{N-1}\\sum_{j=0}^{N-1}\\frac{1}{\\tau}e^{-t_i/\\tau}\\frac{1}{\\tau}e^{-t_j/\\tau}\\right] &=\n",
-    "    \\left(E\\left[N^2\\right]-E[N]\\right)\\frac{1}{k^2\\tau^2}\\left(1-e^{-k}\\right)^2 \\\\\n",
-    " &= \\left(\\lambda k\\tau + (\\lambda k\\tau)^2 - \\lambda k\\tau\\right)\\frac{1}{k^2\\tau^2}\\left(1-e^{-k}\\right)^2 \\\\\n",
-    " &= \\left(\\lambda k\\tau\\right)^2\\frac{1}{k^2\\tau^2}\\left(1-e^{-k}\\right)^2 \\\\\n",
-    " &= \\lambda^2\\left(1-e^{-k}\\right)^2 \\\\\n",
-    "\\end{aligned}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Putting the Expectation of the squared terms with the Expectation of the cross terms,\n",
-    "\n",
-    "\\begin{aligned}\n",
-    "E\\left[Y^2\\right] &= E\\left[\\frac{1}{\\tau}\\sum_{i=0}^{N-1}\\frac{1}{\\tau}e^{-2t_i/\\tau}\\right] +\n",
-    "    E\\left[\\sum_{i=0,i\\neq j}^{N-1}\\sum_{j=0}^{N-1}\\frac{1}{\\tau}e^{-t_i/\\tau}\\frac{1}{\\tau}e^{-t_j/\\tau}\\right] \\\\\n",
-    " &= \\frac{\\lambda}{2\\tau}\\left(1-e^{-2k}\\right) + \\lambda^2\\left(1-e^{-k}\\right)^2,\n",
-    "\\end{aligned}\n",
-    "\n",
-    "and relating to $E[X^2]$,\n",
-    "\n",
-    "\\begin{aligned}\n",
-    "E[X^2] &= \\lim_{k\\rightarrow\\infty}E[Y^2] \\\\\n",
-    " &= \\lim_{k\\rightarrow\\infty} \\frac{\\lambda}{2\\tau}\\left(1-e^{-2k}\\right) + \\lambda^2\\left(1-e^{-k}\\right)^2 \\\\\n",
-    "E[X^2] &= \\frac{\\lambda}{2\\tau} + \\lambda^2\n",
-    "\\end{aligned}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Plugging into the variance equation,\n",
-    "\n",
-    "\\begin{aligned}\n",
-    "\\operatorname{Var}(X) &= E[X^2] - E[X]^2 \\\\\n",
-    " &= \\frac{\\lambda}{2\\tau} + \\lambda^2 - \\lambda^2 \\\\\n",
-    "\\operatorname{Var}(X) &= \\frac{\\lambda}{2\\tau}\n",
-    "\\end{aligned}"
+    "This is pretty ugly..."
    ]
   },
   {
@@ -250,11 +204,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{aligned}\n",
-    "SNR &= \\frac{\\mu}{\\sigma} \\\\\n",
-    " &= \\frac{\\lambda}{\\sqrt{\\lambda/2\\tau}} \\\\\n",
-    " &= \\sqrt{2\\lambda\\tau}\n",
-    "\\end{aligned}"
+    "\\begin{align*}\n",
+    "SNR &= \\frac{E[X]}{\\sqrt{\\Var(X)}} \\\\\n",
+    "\\end{align*}"
    ]
   },
   {
