--- a/synapse/synapse_SNR_poisson.ipynb
+++ b/synapse/synapse_SNR_poisson.ipynb
@@ -4,16 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Notebook description"
+    "# Notebook description\n",
+    "<!---define operatorname var-->\n",
+    "$\\DeclareMathOperator{\\Var}{Var}$\n",
+    "<!---define operatorname var-->"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<!---define operatorname var-->\n",
-    "$\\DeclareMathOperator{\\Var}{Var}$\n",
-    "<!---define operatorname var-->\n",
     "This notebook looks at the signal to noise ratio (SNR) of a synapse with Poisson input spike train with frequency $\\lambda$. [Here](http://nbviewer.ipython.org/github/fragapanagos/notebooks/blob/master/synapse/synapse_SNR_uniform.ipynb) is a notebook considering a synapse with uniform input spikes and [here](http://nbviewer.ipython.org/github/fragapanagos/notebooks/blob/master/synapse/synapse_SNR_uniform.ipynb) is a notebook considering a synapse with $p$-thinned uniform input spikes\n",
     "\n",
     "$$SNR = \\frac{E[X]}{\\sqrt{\\operatorname{Var}(X)}}$$\n",
@@ -58,11 +58,11 @@
    "metadata": {},
    "source": [
     "<div style=\"display:block; border: 1px solid black; padding: 15px;background-color: #EEEEFF;margin: 10px\">\n",
-    "\\begin{align}\n",
+    "\\begin{align*}\n",
     "E[X] &= \\lambda \\\\\n",
     "\\operatorname{Var}(X) &= \\frac{\\lambda}{2\\tau} \\\\\n",
     "SNR &= \\sqrt{2\\lambda\\tau} \\\\\n",
-    "\\end{align}\n",
+    "\\end{align*}\n",
     "</div>"
    ]
   },
@@ -143,7 +143,7 @@
    "metadata": {},
    "source": [
     "\\begin{aligned}\n",
-    "SNR &= \\frac{\\mu}{\\sigma} \\\\\n",
+    "SNR &= \\frac{E[\\Sigma]}{\\sqrt{\\Var(\\Sigma)}} \\\\\n",
     " &= \\frac{\\lambda}{\\sqrt{\\lambda/2\\tau}} \\\\\n",
     " &= \\sqrt{2\\lambda\\tau}\n",
     "\\end{aligned}"
@@ -3663,7 +3663,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "version": "2.7.3"
   }
  },
  "nbformat": 4,
